implementada a funcao consultar danfse
